# aiiot

./: .gitmodules  README.md
practicas/p0-intro/: CMakeLists.txt  iaaiot_p0_grupo1-v1.ipynb  iaaiot_p0_grupo1.ipynb  makefile  monte_carlo.c  monte_carlo.pyd  p0.ipynb
practicas/p1/: parteA.ipynb  parteB.ipynb
